cmake_minimum_required(VERSION 3.5)
project(apps)

add_subdirectory(GraphTest)
add_subdirectory(MatrixTest)
add_subdirectory(DctApp)
add_subdirectory(PCLGen)
add_subdirectory(PCLLoad)
add_subdirectory(AvxTest)
add_subdirectory(BitOp)
add_subdirectory(DataStructure)
add_subdirectory(SimpleMatrix)
add_subdirectory(AvcWrapper)
add_subdirectory(ByteRemap)
add_subdirectory(BitSet)
add_subdirectory(MeshFileParse)
add_subdirectory(ArithmeticCoder)
add_subdirectory(ObjToTriangle)
add_subdirectory(ThreadPool)
add_subdirectory(CurlTest)
add_subdirectory(NetworkBytes)
add_subdirectory(Server)
add_subdirectory(Client)
add_subdirectory(MoofParser)
add_subdirectory(SimpleNvEncode)
add_subdirectory(SimpleNvDecode)
add_subdirectory(SimpleBoostServer)
add_subdirectory(SimpleBoostClient)
#add_subdirectory(SimpleRTPServer)
#add_subdirectory(Stream)
#add_subdirectory(Xml2)
#add_subdirectory(NvEncode)
#add_subdirectory(BufferDecoder)
#add_subdirectory(StreamDecode)
